--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 <body>
     <h1> Kanine Kandies </h1>
    
-    <script src="app.js"></script>
+    <script src="ageVerify.js"></script>
 </body>
 </html>
