--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@800&family=Noto+Serif+Display&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+        crossorigin="anonymous"></script>
+
     <title>Kanine Kandie</title>
 
     <style>
@@ -13,7 +30,7 @@
     background-color: darkslategray;
     padding: 20px;
 }
-.age{
+        .age{
     width: 40%;
     padding:20px;
     margin: auto;
@@ -24,7 +41,62 @@
 </head>
 <body>
     <h1> Kanine Kandies </h1>
+    <div id="message1"></div>
+    <div id="btn"></div>
+    <div id="nav" class="nav">
+        <a href="index.html" id="kaninekandies">Kanine Kandies</a>
+        <a href="fortuneteller.html" id="fortuneteller">Fortune Teller</a>
+        <div style="margin-left:80px;"></div>
+    </div> -->
+    <div id="app">
+        <div class="title">
+            <div class="title-inner">
+                <div class="kanine">
+                    <div class="kk-inner">Kanine</div>
+                </div>
+                <div class="mozart">
+                    <div class="kk2-inner">Kandies</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="image">
+            <img src="images/a-happy-dog.jpg" alt="happydog"></div>
+    </div>
+
+  
+    <div class="dogs">
+
+        <div class="card-deck">
+            <div class="card">
+                <img class="dog1" src="images/Depositphotos_303049756_xl-2015__1_.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">About Kanine Kandies</h5>
+                    <p class="card-text">Learn more about our company.</p>
+                </div>
+            </div><br><br>
+            <div class="card">
+                <img class="dog2" src="images/cbd-for-pets-m.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">CBD Products</h5>
+                    <p class="card-text">Search our online store for CBD products</p>
+
+                </div>
+            </div><br><br>
+            <div class="card">
+                <img class="dog3" src="images/cbd-dog-overdose-1280x720.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title"></h5>
+                    <p class="card-text">Location and Contact</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
    
     <script src="ageVerify.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
