made changes to form

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="image">
-            <img src="images/a-happy-dog.jpg" alt="happydog"></div>
+            <img src="images/dog.jfif" alt="happydog"></div>
     </div>
 
   
@@ -69,14 +69,14 @@
 
         <div class="card-deck">
             <div class="card">
-                <img class="dog1" src="images/Depositphotos_303049756_xl-2015__1_.jpg" alt="Card image cap">
+                <img class="dog1" src="images/dog1.jfif" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">About Kanine Kandies</h5>
                     <p class="card-text">Learn more about our company.</p>
                 </div>
             </div><br><br>
             <div class="card">
-                <img class="dog2" src="images/cbd-for-pets-m.png" alt="Card image cap">
+                <img class="dog2" src="images/dog2.jfif" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">CBD Products</h5>
                     <p class="card-text">Search our online store for CBD products</p>
@@ -84,7 +84,7 @@
                 </div>
             </div><br><br>
             <div class="card">
-                <img class="dog3" src="images/cbd-dog-overdose-1280x720.jpg" alt="Card image cap">
+                <img class="dog3" src="images/dog3.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title"></h5>
                     <p class="card-text">Location and Contact</p>
