--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <div id="nav" class="nav">
         <a href="index.html" id="kaninekandies">Kanine Kandies</a>
         <a href="fortuneteller.html" id="fortuneteller">Fortune Teller</a>
-        <div style="margin-left:80px;"></div>
+        <a href="forms.html" id="forms"> Forms Validation </a>
+        <div style="margin-left:80px;">
     </div> -->
     <div id="app">
         <div class="title">
